Fixed some alignment

--- a/style.css
+++ b/style.css
@@ -33,10 +33,17 @@ body {
     height: 400px;
     width: 320px;
     flex-flow: row wrap;
-    margin: 0 100px 0 0;
+    margin: 0 20px 0 0;
 }
 
-.button-container > div, operator-container > div { 
+.operator-container {
+    display: flex;
+    width: 60px;
+    height: 400px;
+    flex-flow: row wrap;
+}
+
+.button-container > div, .operator-container > div { 
     background-color: gainsboro;
     border: 1px darkgray solid;
     height: 45px;
@@ -45,13 +52,13 @@ body {
     margin: 0 2px 0 2px;
 }
 
-.button-container > div > p { 
+.button-container > div > p, .operator-container > div > p { 
     text-align: center;
     font-family: Wallpoet;
     margin: auto 0;
     font-size: 28px;
 }
 
-.button-container > div:hover { 
+.button-container > div:hover, .operator-container > div:hover { 
     background-color: darkgray;
 }
